--- a/june19/index.html
+++ b/june19/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1 id="data"></h1>
-    <button onclick="hello()">start</button>
-    <button onclick="hii()" id="stop">stop</button>
+<body onload="digital()">
+
+    <h1 id="show"></h1>
+    
+
     <script src="script.js"></script>
 </body>
 </html>
