--- a/june27/json.html
+++ b/june27/json.html
@@ -6,7 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <table border="1" align="center">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Aadhar</th>
+                <th>Checkin</th>
+                <th>Checkout</th>
+                <th>City</th>
+                <th>People</th>
+                <th>Total</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+        <tbody id="showdata">
+
+        </tbody>
+    </table>
 
 <script src="json.js"></script>
     
