--- a/june27/crud.html
+++ b/june27/crud.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body onload="Fetchdata() ">
     <table border="1" align="center">
         <thead>
             <tr>
@@ -24,7 +24,7 @@
         </tbody>
     </table>
 
-<script src="json.js"></script>
+<script src="crud.js"></script>
     
 </body>
 </html>
