--- a/june27/crudform.html
+++ b/june27/crudform.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form>
-        Enter name: <input type="text" id="name">
+        Enter Name: <input type="text" id="name">
         <br><br>
         Enter Aadhar: <input type="text" id="aadhar">
         <br><br>
@@ -26,8 +26,6 @@
         Enter Person: <input type="text" id="person">
         <br><br>
         <input type="submit" value="Book Now" onclick="return Ins()">
-
-        
     </form>
     <script src="crud.js"></script>
 </body>
