--- a/june6/task.html
+++ b/june6/task.html
@@ -3,48 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="task.css">
     <title>My Page</title>
-    <style>
-        .box{
-            background-size: cover;
-        }
+    <style> 
         .head{
-            height: 700px;
+            height: 800px;
             width: 800px; 
             border: 2px solid black;
             background-image: url(https://bioscomputacion.com.ar/img/Public/1161/75844-producto-ld0006166713-0006166744-00061667.jpg);
             margin-left: 300px;
             border-radius: 20px;
+            background-size: cover;
+            background-repeat: no-repeat;
         }
         .container{
             display: flex;
             flex-direction: row;
-            gap: 21.5px;
+            gap: 22px;
             margin-left: 300px;
             margin-top: 20px;
         }
         .one{
-            height: 250px;
-            width: 250px;
+            height: 180px;
+            width: 180px;
             border: 2px solid black;
             border-radius: 20px;
             background-image: url(main.jpeg);
+            background-size: cover;
+            background-repeat: no-repeat;
         }
         .second{
-            height: 250px;
-            width: 250px;
+            height: 180px;
+            width: 180px;
             border: 2px solid black;
             border-radius: 20px;
             background-image: url(one.jpeg);
+            background-size: cover;
+            background-repeat: no-repeat;
         }
         .third{
-            height: 250px;
-            width: 250px;
+            height: 180px;
+            width: 180px;
             border: 2px solid black;
             border-radius: 20px;
-            background-image: url(three.jpeg);
+            background-image: url(second.jpeg);
+            background-size: cover;
+            background-repeat: no-repeat;
         }
+        .four{
+            height: 180px;
+            width: 180px;
+            border: 2px solid black;
+            border-radius: 20px;
+            background-image: url(https://bioscomputacion.com.ar/img/Public/1161/75844-producto-ld0006166713-0006166744-00061667.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+        }    
     </style>
 </head>
 <body>
@@ -54,6 +67,7 @@
             <div class="one" onclick="hello()"></div> 
             <div class="second" onclick="hii()"></div>
             <div class="third" onclick="byy()"></div> 
+            <div class="four" onclick="tata()"></div>
         </div> 
     </div>
     <script src="task.js"></script>
