--- a/june27/crud.html
+++ b/june27/crud.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body onload="Fetchdata() ">
+    Search: <input type="text" id="search" oninput="search()" >
     <table border="1" align="center">
         <thead>
             <tr>
@@ -17,12 +18,16 @@
                 <th>People</th>
                 <th>Total</th>
                 <th>Delete</th>
+                <th>Update</th>
             </tr>
         </thead>
         <tbody id="showdata">
 
         </tbody>
     </table>
+    <div id="formShow">
+
+    </div>
 
 <script src="crud.js"></script>
     
